tests/golden/type_errors/generic_struct_recursive.cd
struct Node<T> { next: Node<T>? }
