tests/golden/type_errors/generic_struct_recursive.err
Type error at 1:24: recursive struct field `next` references `Node`
  struct Node<T> { next: Node<T>? }
                         ^
